# ClinSize

./: .gitignore  Cargo.toml  README.md  TODO.md  justfile
crates/clinsize-cli/: Cargo.toml
crates/clinsize-cli/src/: main.rs
crates/clinsize-core/: Cargo.toml  build.rs
crates/clinsize-core/src/: dispatch.rs  error.rs  lib.rs  registry.rs  types.rs
crates/clinsize-core/src/distributions/: equicorrelated_normal.rs  f_distribution.rs  mod.rs  noncentral_f.rs  noncentral_t.rs  normal.rs  student_t.rs
crates/clinsize-core/src/methods/: mod.rs
crates/clinsize-core/src/methods/binary/: mod.rs  odds_ratio.rs  one_sample_binomial.rs  risk_ratio.rs  shared.rs  two_proportion_difference.rs
crates/clinsize-core/src/methods/continuous/: ancova_two_sample.rs  change_from_baseline.rs  mann_whitney.rs  mmrm.rs  mod.rs  nonparametric.rs  one_sample_ttest.rs  one_way_anova.rs  paired_ttest.rs  single_sample_t.rs  two_sample_ttest.rs  two_way_anova.rs  wilcoxon_signed_rank.rs
crates/clinsize-core/src/methods/count/: mod.rs  negative_binomial.rs  poisson.rs
crates/clinsize-core/src/methods/design/: blinded_ssre.rs  group_sequential.rs  mod.rs  multiplicity.rs  sequential_bounds.rs  spending.rs
crates/clinsize-core/src/methods/ordinal/: mod.rs  proportional_odds.rs
crates/clinsize-core/src/numerics/: mod.rs
crates/clinsize-core/src/reports/: docx.rs  html.rs  markdown_render.rs  mod.rs  pdf.rs  protocol.rs  rationale.rs
crates/clinsize-core/src/validation/: mod.rs
crates/clinsize-core/src/validation_report/: mod.rs
examples/: README.md
handbook/: 11-roadmap.md  (+14 more)
(+159 files in other folders)
