[package]
name = "clinsize-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "clinsize"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clinsize-core = { path = "../clinsize-core" }
serde_json.workspace = true
